[package]
name = "powered-by-enslaved-ferrises"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenv = "0.15.0"
rand = "0.8.5"
serenity = { version = "0.11.5", features = ["client", "gateway", "framework", "standard_framework", "cache", "rustls_backend", "builder", "model", "collector", "utils"] }
tokio = { version = "1.23.0", features = ["macros", "signal", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
